fix: fix delete button alignment

--- a/themes/origins/styles/cart.scss
+++ b/themes/origins/styles/cart.scss
@@ -275,7 +275,7 @@ yc-section {
             width: 100%;
             gap: var(--gap-xl) !important;
 
-            .delete {
+            yc-cart-remove-button {
               margin-inline-start: auto;
             }
           }
